# maktab-dl

./: .gitignore  README.md  pyproject.toml  setup.py
maktab_dl/: cli.py  handler.py  logging.py  schemas.py  utils.py
