[project]
name = "maktab-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.5",
    "lxml>=5.3.0",
    "click>=8.1.8",
    "tqdm>=4.67.1",
]
[project.scripts]
maktab-dl = "maktab_dl.cli:main"

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

